--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.1"
   },
   "devDependencies": {
+    "@types/node": "^12.0.3",
     "nodemon": "^1.19.1",
     "ts-node": "^8.2.0"
   },
